@@ -2,7 +2,8 @@
 .\" ** The above line should force tbl to be a preprocessor **
 .\" Man page for man
 .\"
-.\" Copyright (C), 1994, 1995, Graeme W. Wilford. (Wilf.)
+.\" Copyright (C) 1994, 1995, Graeme W. Wilford. (Wilf.)
+.\" Copyright (C) 2001, 2002, 2003, 2006, 2007, 2008 Colin Watson.
 .\"
 .\" You may distribute under the terms of the GNU General Public
 .\" License as specified in the file COPYING that comes with the
