@@ -1,3 +1,8 @@
+Sun Mar  2 11:56:48 GMT 2008  Colin Watson  <cjwatson@debian.org>
+
+	* man/man1/man.man1, src/encodings.c, src/encodings.h,
+	  src/lexgrog_test.c: Update copyright notices.
+
 Sun Mar  2 11:03:21 GMT 2008  Colin Watson  <cjwatson@debian.org>
 
 	Improve 'man -E' to allow overriding the output encoding explicitly,
